--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,21 +1,29 @@
 Package: crsmeta
 Title: Extract Coordinate System Metadata
-Version: 0.0.0.9000
+Version: 0.1.0
 Authors@R: 
     person(given = "Michael",
            family = "Sumner",
            role = c("aut", "cre"),
            email = "mdsumner@gmail.com",
            comment = c(ORCID = "0000-0002-2471-7511"))
-Description: Obtain coordinate system metadata from various formats. This is
- purely for getting simple metadata from in-memory formats, please use other
+Description: Obtain coordinate system metadata from various data formats. There 
+ are functions to extract a 'CRS' (coordinate reference system, 
+ <https://en.wikipedia.org/wiki/Spatial_reference_system>) in 'EPSG' (European 
+ Petroleum Survey Group, <http:/epsg.org/>), 'PROJ4' <https://proj.org/>, 
+ or 'WKT2' (Well-Known Text 2, 
+ <http://docs.opengeospatial.org/is/12-063r5/12-063r5.html>) forms. This is 
+ purely for getting simple metadata from in-memory formats, please use other 
  tools for out of memory data sources. 
 License: GPL-3
 Encoding: UTF-8
 LazyData: true
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.0.2
+Depends: R (>= 3.2)
 Suggests: 
     testthat (>= 2.1.0)
 Imports: 
     methods
+URL: https://github.com/hypertidy/crsmeta
+BugReports: https://github.com/hypertidy/crsmeta/issues
