--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,6 @@
 Package: crsmeta
 Title: Extract Coordinate System Metadata
-Version: 0.1.6
+Version: 0.1.7
 Authors@R: 
     person(given = "Michael",
            family = "Sumner",
@@ -10,7 +10,7 @@ Authors@R:
 Description: Obtain coordinate system metadata from various data formats. There 
  are functions to extract a 'CRS' (coordinate reference system, 
  <https://en.wikipedia.org/wiki/Spatial_reference_system>) in 'EPSG' (European 
- Petroleum Survey Group, <http://epsg.org/>), 'PROJ4' <https://proj.org/>, 
+ Petroleum Survey Group, <http://www.epsg.org/>), 'PROJ4' <https://proj.org/>, 
  or 'WKT2' (Well-Known Text 2, 
  <http://docs.opengeospatial.org/is/12-063r5/12-063r5.html>) forms. This is 
  purely for getting simple metadata from in-memory formats, please use other 
